--- a/paper/evaluation.tex
+++ b/paper/evaluation.tex
@@ -3,7 +3,12 @@
 \subsection{Performance Evaluation}
 
 \subsubsection{NUMA Architecture}
-We will compare with popular allocator, such as glibc, or tcmalloc, or NUMA-aware tcmalloc as well. 
+We will compare with popular allocator, such as glibc, or tcmalloc, or NUMA-aware tcmalloc , jemalloc, scalloc. 
+
+%Scalloc is located in https://github.com/cksystemsgroup/scalloc
+
+% Christoph also has a benchmark suite to evaluate the performance of memory allocator. 
+
 
 \subsubsection{UMA Architecture}
 We will compare the performance even on non-numa architecture, which could be more general. 
