--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,8 +1,8 @@
-\textbf{OOPSLA Deadline: 04-16-2018, OSDI:05-03/2018}
 
 \section{Introduction}
+\label{sec:intro}
 
-How to design the new allocator?
+How to design the new allocator? This is the new one. 
 
 We will try to achieve the following target. 
 
