--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -16,6 +16,15 @@
  keywords = {concurrency, monitoring, race, threading},
 } 
 
+@inproceedings{wagle2015numa,
+  title={NUMA-aware memory management with in-memory databases},
+  author={Wagle, Mehul and Booss, Daniel and Schreter, Ivan and Egenolf, Daniel},
+  booktitle={Technology Conference on Performance Evaluation and Benchmarking},
+  pages={45--60},
+  year={2015},
+  organization={Springer}
+}
+
 @inproceedings{healy2010design,
   title={Design and analysis of 3D-MAPS: A many-core 3D processor with stacked memory},
   author={Healy, Michael B and Athikulwongse, Krit and Goel, Rohan and Hossain, Mohammad M and Kim, Dae Hyun and Lee, Young-Joon and Lewis, Dean L and Lin, Tzu-Wei and Liu, Chang and Jung, Moongon and others},
@@ -24,6 +33,57 @@
   year={2010},
   organization={IEEE}
 }
+
+@techreport{cantalupo2015memkind,
+  title={memkind: An Extensible Heap Memory Manager for Heterogeneous Memory Platforms and Mixed Memory Policies.},
+  author={Cantalupo, Christopher and Venkatesan, Vishwanath and Hammond, Jeff and Czurlyo, Krzysztof and Hammond, Simon David},
+  year={2015},
+  institution={Sandia National Lab.(SNL-NM), Albuquerque, NM (United States)}
+}
+
+@phdthesis{kim2013node,
+  title={Node-oriented dynamic memory management for real-time systems on ccNUMA architecture systems},
+  author={Kim, Seyeon},
+  year={2013},
+  school={University of York}
+}
+
+@inproceedings{Scalloc,
+ author = {Aigner, Martin and Kirsch, Christoph M. and Lippautz, Michael and Sokolova, Ana},
+ title = {Fast, Multicore-scalable, Low-fragmentation Memory Allocation Through Large Virtual Memory and Global Data Structures},
+ booktitle = {Proceedings of the 2015 ACM SIGPLAN International Conference on Object-Oriented Programming, Systems, Languages, and Applications},
+ series = {OOPSLA 2015},
+ year = {2015},
+ isbn = {978-1-4503-3689-5},
+ location = {Pittsburgh, PA, USA},
+ pages = {451--469},
+ numpages = {19},
+ url = {http://doi.acm.org/10.1145/2814270.2814294},
+ doi = {10.1145/2814270.2814294},
+ acmid = {2814294},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Memory allocator, concurrent data structures, multicore scalability, virtual memory},
+} 
+
+@inproceedings{Bui:2019:EPV:3302424.3303960,
+ author = {Bui, Bao and Mvondo, Djob and Teabe, Boris and Jiokeng, Kevin and Wapet, Lavoisier and Tchana, Alain and Thomas, Ga\"{e}l and Hagimont, Daniel and Muller, Gilles and DePalma, Noel},
+ title = {When eXtended Para - Virtualization (XPV) Meets NUMA},
+ booktitle = {Proceedings of the Fourteenth EuroSys Conference 2019},
+ series = {EuroSys '19},
+ year = {2019},
+ isbn = {978-1-4503-6281-8},
+ location = {Dresden, Germany},
+ pages = {7:1--7:15},
+ articleno = {7},
+ numpages = {15},
+ url = {http://doi.acm.org/10.1145/3302424.3303960},
+ doi = {10.1145/3302424.3303960},
+ acmid = {3303960},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {NUMA, Virtualization},
+} 
 
 @article{mundt2007asymmetric,
   title={Asymmetric NUMA: Multiple-memory management for the rest of us.},
@@ -72,6 +132,23 @@ isbn="978-3-642-35606-3",
 doi="10.1007/978-3-642-35606-3_24",
 url="http://dx.doi.org/10.1007/978-3-642-35606-3_24"
 }
+
+@inproceedings{Bolosky:1989:SBE:74850.74854,
+ author = {Bolosky, W. and Fitzgerald, R. and Scott, M.},
+ title = {Simple but Effective Techniques for NUMA Memory Management},
+ booktitle = {Proceedings of the Twelfth ACM Symposium on Operating Systems Principles},
+ series = {SOSP '89},
+ year = {1989},
+ isbn = {0-89791-338-8},
+ pages = {19--31},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/74850.74854},
+ doi = {10.1145/74850.74854},
+ acmid = {74854},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
 
 
 @article{Majo:2017:LPC:3057718.3040222,
